<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="@drawable/pic2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp" 
        android:layout_weight="2"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
        android:id="@+id/o_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:padding="20dp"
        android:text="@string/o_name" />
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp" 
        android:layout_weight="8"
        android:orientation="vertical" >
        
        <Switch
        android:id="@+id/o_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:thumb="@drawable/switch_thumb"
        android:track="@drawable/switch_track"
        android:textSize="20sp" 
   		android:padding="20dp"
        android:textOn="@string/on"
        android:textOff="@string/off"
        android:text="@string/o_switch" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" 
        android:padding="20dp"
        android:text="@string/o_explain" />
    </LinearLayout>

</LinearLayout>