<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic13"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
        android:background="@layout/shape"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting_item1"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:text="@string/setting_item1"
            android:textSize="19sp" 
        	android:padding="10dp" />
        
        <CheckBox
		     android:id="@+id/checkBox_item1"
		     android:layout_width="0dp"
             android:layout_weight="1"
		     android:layout_height="match_parent"
		     android:layout_marginEnd="10dp"/>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp"
        android:background="@layout/shape"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/explain_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explain_item1"
            android:textSize="15sp" 
        	android:padding="10dp" />
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/shape"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/steting_item2"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:text="@string/setting_item2"
            android:textSize="19sp" 
        	android:padding="10dp" />
		<CheckBox
		     android:id="@+id/checkBox_item2"
		     android:layout_width="0dp"
             android:layout_weight="1"
		     android:layout_height="match_parent"
		     android:layout_marginEnd="10dp"/>
    </LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20dp"
        android:background="@layout/shape"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/explain_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explain_item2"
            android:textSize="15sp" 
        	android:padding="10dp" />
    </LinearLayout>
</LinearLayout>