<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/pic11">
    <TableLayout 
        android:id="@+id/tl_main"
  		android:layout_width="fill_parent"
  		android:layout_height="0dp"
  		android:layout_weight="8">
	</TableLayout>
	<LinearLayout  
  		android:layout_width="fill_parent"
  		android:layout_height="0dp"
  		android:layout_weight="2"
  		android:background="@layout/shape"
  		android:orientation="horizontal">
 		
			<LinearLayout 
       		android:layout_width="0dp"
       		android:layout_weight="1"
       		android:layout_height="wrap_content"
       		android:layout_marginTop="30dp"
       		android:gravity="center"
       		android:orientation="vertical">
 			<ImageView
 			    android:id="@+id/iv_refresh"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:src="@drawable/refresh" />
 			<TextView
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_marginTop="5dp"
 			    android:text="@string/refresh"
 			    android:textColor="#1B940A"
 			    android:textStyle="bold" />
 	   		</LinearLayout>
 		    
   			<LinearLayout 
       		android:layout_width="0dp"
       		android:layout_weight="1"
       		android:layout_height="wrap_content"
       		android:layout_marginTop="30dp"
       		android:gravity="center"
       		android:orientation="vertical">
        		<ImageView
             	android:id="@+id/iv_add"
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
             	android:src="@drawable/add" />

        		<TextView 
             	android:layout_width="wrap_content"
             	android:layout_height="wrap_content"
             	android:layout_marginTop="5dp"
             	android:text="@string/add"
             	android:textColor="#1B940A"
             	android:textStyle="bold" />
 			</LinearLayout>
 			
 			<LinearLayout 
       		android:layout_width="0dp"
       		android:layout_weight="1"
       		android:layout_height="wrap_content"
       		android:layout_marginTop="30dp"
       		android:gravity="center"
       		android:orientation="vertical">
        		<ImageView
   			    android:id="@+id/iv_delete"
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:src="@drawable/delete" />
 				<TextView
   			    android:layout_width="wrap_content"
   			    android:layout_height="wrap_content"
   			    android:layout_marginTop="5dp"
   			    android:text="@string/delete"
   			    android:textColor="#1B940A"
   			    android:textStyle="bold" />
 			</LinearLayout>
		</LinearLayout>
    
</LinearLayout>

 